# python-tumba

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ext.cpp  pyproject.toml  setup.py  tests.py  tumba.py
DOCS/: Benchmark.ipynb  TUMBA - с комментариями.docx  TUMBA_plan.xlsx  Timer.py  code_requirements.md  inspection_regulation.docx  presentation 3.py  Документация.docx  документация.docx
src/: ext.cpp
src/tumba/: tests.py  tumba.py
