[project]
name = "tumba"
version = "0.0.1"
requires-python = ">=3.11"

[build-system]
requires = [
    "wheel",
    "setuptools>=60",
    "ninja",
    "cmake>=3.18.2",
    "cmake-build-extension",
    "pybind11",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default
namespaces = false  # true by default
